force-app/main/default/objects/Aged_Care_Planning_Region__c/Aged_Care_Planning_Region__c.object-meta.xml
<CustomObject>
    <label>Aged Care Planning Region</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aged Care Planning Regions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>