force-app/main/default/objects/Aged_Care_Planning_Region__c/fields/ACPR_Code__c.field-meta.xml
<CustomField>
    <fullName>ACPR_Code__c</fullName>
    <label>ACPR Code</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>