force-app/main/default/objects/Aged_Care_Planning_Region__c/fields/ACPR_ID__c.field-meta.xml
<CustomField>
    <fullName>ACPR_ID__c</fullName>
    <label>ACPR ID</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>