force-app/main/default/objects/Aged_Care_Planning_Region__c/fields/ACPR_State__c.field-meta.xml
<CustomField>
    <fullName>ACPR_State__c</fullName>
    <label>ACPR State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>