force-app/main/default/objects/Aged_Care_Planning_Region__c/fields/Geo_Version_ID__c.field-meta.xml
<CustomField>
    <fullName>Geo_Version_ID__c</fullName>
    <label>Geo Version ID</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>