force-app/main/default/objects/Aged_Care_Planning_Region__c/fields/Geospatial_Information_Layer_Version__c.field-meta.xml
<CustomField>
    <fullName>Geospatial_Information_Layer_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Geospatial Information Layer Version</label>
    <referenceTo>GPMS_Geospatial_Information_LayerVersion__c</referenceTo>
    <relationshipLabel>Aged Care Planning Regions</relationshipLabel>
    <relationshipName>Aged_Care_Planning_Regions</relationshipName>
    <type>Lookup</type>
</CustomField>