force-app/main/default/objects/Aged_Care_Planning_Region__c/fields/LegacyModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>LegacyModifiedDate__c</fullName>
    <description>Legacy modified date field.</description>
    <label>Legacy Modified Date</label>
    <type>DateTime</type>
</CustomField>